加上 Laravel View

--- a/app_src/.env
+++ b/app_src/.env
@@ -3,17 +3,11 @@ APP_DEBUG=true
 APP_KEY=C3ton4DAmdNlUr9G49f7o4R5CMdt13k4
 
 APP_DB=sdic_tst
-#APP_DB=sdic
-
-DB_HOST=10.161.81.189
-DB_DATABASE=sdic
-DB_USERNAME=kaosh
-DB_PASSWORD=610_926
 
 DB_HOST_TST=10.161.86.75
 DB_DATABASE_TST=sdic_tst
-DB_USERNAME_TST=caxcgi
-DB_PASSWORD_TST=isbn~957 
+DB_USERNAME_TST=caucgi
+DB_PASSWORD_TST=Ur9tonAmd
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
