--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,33 @@
 {
-    "name": "Slim2-basic-app",
-    "config": {
-        "vendor-dir": "web_base/vendor"
-    },
-    "require": {
-        "slim/slim": "2.*",
-        "slim/logger": "*",
-        "illuminate/config": "5.1.*",
-        "illuminate/database": "5.1.*",
-        "illuminate/cache": "5.1.*",
-        "illuminate/session": "5.1.*",
-        "illuminate/filesystem": "5.1.*",
-        "illuminate/view": "5.1.*",
-        "vlucas/phpdotenv": "*",
-        "statical/statical": "1.*",
-        "tracy/tracy": "2.4.*"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app_src/app",
-            "LAbasic\\": "web_base/LAbasic"
-        }
-    } 
+  "name": "ajax/slumin_tst",
+  "authors": [
+    {
+      "name": "ajax",
+      "email": "ajaxchen@ntu.edu.tw"
+    }
+  ],
+  "config": {
+    "vendor-dir": "fw_src/vendor"
+  },
+  "require": {
+    "illuminate/cache": "5.0.*",
+    "illuminate/config": "5.0.*",
+    "illuminate/database": "5.0.*",
+    "illuminate/events": "5.0.*",
+    "illuminate/routing": "5.0.*",
+    "illuminate/session": "5.0.*",
+    "illuminate/view": "5.0.*",
+    "vlucas/phpdotenv": "*",
+    "statical/statical": "1.*",
+    "tracy/tracy": "2.4.*"
+  },
+  "autoload": {
+    "psr-4": {
+      "Slim\\": "fw_src/slim/Slim",
+      "Slim\\Logger\\": "fw_src/slim/logger",
+      "LAbasic\\": "fw_src/LAbasic",
+      "App\\": "app_src/app"
+    }
+  }
 }
+
