--- a/app_src/.env
+++ b/app_src/.env
@@ -14,7 +14,7 @@ SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=10.161.86.133
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null 
